<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/detailImageView"
        android:src="@mipmap/no_image_url"
        android:layout_marginBottom="16dp">

    </ImageView>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:background="@drawable/border"
        android:focusable="true"
        android:focusableInTouchMode ="true"
        android:ems="10"
        android:hint="@string/enterTitle"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:background="@drawable/border"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode ="true"
        android:hint="@string/enterDescription"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextImageUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:background="@drawable/border"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode ="true"
        android:hint="@string/enterImageUrl"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/saveNoteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:text="Save Note" />
</LinearLayout>